# AutoSkillit

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  SCEN-REQ.md  Taskfile.yml  evolution2.apng  install.sh  pyproject.toml
.autoskillit/: .gitignore  config.yaml  sync_manifest.json  test-filter-manifest.yaml  test-source-map.json
.autoskillit/recipes/: audit-and-fix.yaml  bugfix-loop.yaml  full-audit.yaml  implementation-pipeline.yaml  investigate-first.yaml  pr-merge-pipeline.yaml  smoke-test.yaml
.autoskillit/scripts/: bugfix-loop.yaml  implementation-pipeline.yaml  implementation.yaml  investigate-first.yaml  smoke-test.yaml
.claude/: settings.json
.claude-plugin/: hooks.json
.github/workflows/: codeql.yml  patch-bump-develop.yml  patch-bump-integration.yml  release.yml  test-filter-audit.yml  tests.yml  version-bump.yml
docs/: README.md  architecture.md  cli-reference.md  cli.md  configuration.md  developer.md  end-turn-hazards.md  faq.md  getting-started.md  glossary.md  installation.md  mcp-tool-access.md  orchestration-levels.md  project-local-overrides.md  recipes.md  skill-visibility.md  sub-recipe-composition.md  subset-categories.md  update-checks.md  version-pipeline.md
docs/decisions/: 0001-prohibit-background-subagent-execution.md  0002-ban-inline-shell-scripts-from-cmd.md  0003-skill-args.md  README.md
docs/design/: README.md  env-setup-design.md
docs/developer/: README.md  contributing.md  diagnostics.md  end-turn-hazards.md
docs/examples/: README.md  research-pipeline.md
docs/execution/: README.md  architecture.md  orchestration.md  tool-access.md
docs/operations/: README.md  observability.md  sprint-guide.md
docs/recipes/: README.md  authoring.md  composition.md  overview.md
docs/research/: experiment-type-rationale.md
docs/safety/: README.md  hooks.md  workspace.md
docs/skills/: README.md  catalog.md  overrides.md  subsets.md  visibility.md
scripts/: benchmark-testmon.py  check_doc_counts.py  check_sub_claude_md.py  check_tool_annotations.py  compare-coverage-ast.py  sync_plugin_json.py  sync_versions.py  verify-test-filter.sh
scripts/recipe/: advance_queue_pr.sh  create_artifact_branch.sh  create_worktree.sh  finalize_bundle.sh  open_artifact_pr.sh  push_branch.sh  stage_bundle.sh  tag_experiment_branch.sh
src/automation_mcp/: __init__.py  __main__.py  cli.py  config.py  process_lifecycle.py  server.py  skill_resolver.py  workflow_loader.py
src/autoskillit/: .mcp.json  CLAUDE.md  __init__.py  __main__.py  _audit.py  _context.py  _doctor.py  _gate.py  _io.py  _llm_triage.py  _logging.py  _test_filter.py  _token_log.py  _yaml.py  cli.py  config.py  contract_validator.py  db_tools.py  failure_store.py  git_operations.py  headless_runner.py  hook_registry.py  migration_engine.py  migration_loader.py  process_lifecycle.py  recipe_io.py  recipe_loader.py  recipe_parser.py  recipe_schema.py  recipe_validator.py  script_loader.py  semantic_rules.py  server.py  session_parser.py  session_result.py  skill_contracts.yaml  skill_resolver.py  smoke_utils.py  sync_manifest.py  test_runner.py  (+4 more)
tests/: CLAUDE.md  _helpers.py  _subprocess_ready.py  _test_filter.py  conftest.py  fakes.py  test_analyze_prs_gates.py  test_anyio_infra.py  test_architecture.py  test_audit.py  test_ci_dev_config.py  test_cli.py  test_clone.py  test_commands.py  test_config.py  test_conftest.py  test_context.py  test_contract_validator.py  test_core.py  test_db_tools.py  test_factory.py  test_failure_store.py  test_fakes_conformance.py  test_gate.py  test_git_operations.py  test_github_tools.py  test_headless_runner.py  test_hook_registry.py  test_import_paths.py  test_instruction_surface_contract.py  test_io.py  test_l1_packages.py  test_llm_triage.py  test_logging.py  test_migration_engine.py  test_migration_loader.py  test_no_orchestration_tier_language.py  test_package_gateways.py  test_phase2_cook_session.py  test_phase2_headless_env.py  (+53 more)
tests/arch/: CLAUDE.md  _deselection.py  _helpers.py  _rules.py  conftest.py  test_anyio_migration.py  test_arch_deselection.py  test_ast_rules.py  test_audit_feature_gates_skill.py  test_bundled_recipes_split.py  test_cascade_map_guard.py  test_channel_b_timeout_guard.py  test_cli_decomposition.py  test_doctor_readonly.py  test_execution_source_split.py  test_feature_markers.py  test_feature_registry.py  test_file_size_budgets.py  test_filter_contracts.py  test_gate_path_canonical.py  test_gfm_rendering_guard.py  test_headless_split.py  test_import_layer_labels.py  test_import_linter_contracts.py  test_import_paths.py  test_kitchen_guard_scoping.py  test_layer_enforcement.py  test_layer_markers.py  test_never_raises_contracts.py  test_no_inline_jsonl_request_id_dedup.py  test_protocol_names.py  test_python_no_hardcoded_temp.py  test_recipe_rule_registration.py  test_registry.py  test_registry_key_casing.py  test_size_markers.py  test_startup_budget.py  test_subpackage_isolation.py  test_subpackage_structure.py  test_tool_annotation_completeness.py  (+1 more)
tests/assets/: CLAUDE.md  test_mermaid_vendored.py
tests/cli/: CLAUDE.md  _fleet_helpers.py  _update_checks_helpers.py  conftest.py  test_ansi.py  test_app_main.py  test_chefs_hat.py  test_cli_cook.py  test_cli_doctor.py  test_cli_hooks.py  test_cli_install.py  test_cli_marketplace.py  test_cli_prompts.py  test_cli_serve_logging.py  test_compute_exit_code.py  test_cook.py  test_cook_env_scrub.py  test_cook_features.py  test_cook_ide_isolation.py  test_cook_interactive.py  test_cook_order_command.py  test_cook_order_picker.py  test_cook_order_prompt.py  test_cook_profile.py  test_cook_workspace.py  test_doctor.py  test_doctor_migration.py  test_doctor_scripts.py  test_doctor_split.py  test_features_cli.py  test_fleet_campaign.py  test_fleet_campaign_preview.py  test_fleet_cli.py  test_fleet_dispatch.py  test_fleet_list.py  test_fleet_session.py  test_fleet_split.py  test_fleet_status.py  test_food_truck_prompt.py  test_franchise_cli.py  (+36 more)
tests/config/: CLAUDE.md  test_branching_config.py  test_config.py  test_config_split.py  (+15 more)
(+1477 files in other folders)
