[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoskillit"
version = "0.2.0"
description = "MCP server for orchestrating automated skill-driven workflows with Claude Code"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.0.2",
    "packaging>=23.0",
    "psutil>=7.2.0",
    "pyyaml>=6.0",
    "cyclopts>=3.0",
    "structlog>=25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.9.0",
]

[project.scripts]
autoskillit = "autoskillit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/autoskillit"]
artifacts = ["src/autoskillit/.claude-plugin/**", "src/autoskillit/.mcp.json", "src/autoskillit/migrations/**"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
empty_parameter_set_mark = "fail_at_collect"
addopts = []
markers = [
    "smoke: end-to-end smoke tests requiring Claude API access (deselect with: -m 'not smoke')",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "TID251"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"logging.getLogger" = {msg = "Use get_logger() from autoskillit._logging instead."}
